--- a/CSS Positioning/absolute.html
+++ b/CSS Positioning/absolute.html
@@ -6,16 +6,15 @@
     <title>CSS Position</title>
   </head>
   <body>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="absoluteStyle.css" />
     <h1>Difference Between different CSS Position</h1>
     <div class="outer-container">
       <div class="inner-container">
-        <div class="inner1-container">
-          <div class="position-relative">Relative</div>
-          <div class="position-absolute">Absolute</div>
-          <div class="position-fixed">Fixed</div>
-          <div class="position-sticky">Sticky</div>
-        </div>
+        <!-- <div class="inner1-container"> -->
+        <div class="position-absolute1">Absolute1</div>
+        <div class="position-absolute2">Absolute2</div>
+        <div class="position-absolute3">Absolute3</div>
+        <!-- </div> -->
       </div>
     </div>
   </body>
