--- a/CSS Selectors/index.html
+++ b/CSS Selectors/index.html
@@ -7,9 +7,19 @@
   </head>
   <body>
     <link rel="stylesheet" href="style.css" />
-    <h1>Difference Between different CSS Position</h1>
-    <div id="idOne"></div>
-    <div class="two"></div>
+    <h1>CSS Selector & Specificity</h1>
+    <div id="idOne" class="test">What color am I?</div>
+    <div id="outer">
+      <div class="parent-container">
+        <h2>Notification</h2>
+        <div class="content-container">
+          <p class="error-message">Some error has occured</p>
+        </div>
+        <div class="button-container">
+          <button>Ok</button>
+        </div>
+      </div>
+    </div>
     <div></div>
     <div></div>
   </body>
