specificity for inline styles

--- a/CSS Selectors & Specificity/index.html
+++ b/CSS Selectors & Specificity/index.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="style.css" />
     <h1>CSS Selector & Specificity</h1>
     <div id="idOne" class="test">What color am I?</div>
+    <div id="idTwo" class="twoDiv" style="font-size: 16px">
+      What is my fontSize?
+    </div>
     <div id="outer">
       <div class="parent-container">
         <h2>Notification</h2>
         <div class="content-container">
-          <p class="error-message">Some error has occured</p>
+          <p class="error-message">🔔 Some error has occured</p>
         </div>
         <div class="button-container">
           <button>Ok</button>
